--- a/src/app/components/quiz/quiz.component.html
+++ b/src/app/components/quiz/quiz.component.html
@@ -1,1 +1,26 @@
-<p>quiz works!</p>
+<div class="quiz__container">
+
+  <div class="quiz_logo">
+    <img src="assets/img/logo.png" alt="">
+    <h3>{{ title }}</h3>
+  </div>
+
+  <div *ngIf="!finished" class="quiz_questions">
+    <h3>{{ questionSelected.question }}</h3>
+  </div>
+
+  <div *ngIf="!finished" class="quiz_options">
+    <button
+    *ngFor="let option of questionSelected.options; let i = index"
+    (click)="playerChoice(option.alias)"
+    class="btn-option">
+      {{option.name}}
+    </button>
+  </div>
+
+  <div *ngIf="finished" class="quiz_results">
+    <h1>O seu resultado é:</h1>
+    <p>{{ answerSelected }}</p>
+  </div>
+
+</div>
